--- a/index.html
+++ b/index.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Web Map</title>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <title>Web Map - Enhanced</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    #map { height: 100vh; }
+    body, html { margin: 0; padding: 0; height: 100%; }
+    #map { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
     // Inisialisasi peta
-    var map = L.map('map').setView([-6.2, 106.8], 12); // ganti dengan koordinat kamu
+    var map = L.map('map').setView([-6.2, 106.8], 12); // ganti dengan lokasi pusat peta kamu
 
-    // Tambahkan layer peta dasar dari OpenStreetMap
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
+    // Tile dasar mirip Google Maps (Carto Light)
+    var baseLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://carto.com/">CARTO</a> | &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    // Ambil dan tampilkan data GeoJSON
+    // Tambahkan GeoJSON dari file eksternal
     fetch('data.geojson')
-      .then(res => res.json())
+      .then(response => response.json())
       .then(data => {
-        L.geoJSON(data, {
+        var geojsonLayer = L.geoJSON(data, {
           onEachFeature: function (feature, layer) {
-            if (feature.properties && feature.properties.name) {
-              layer.bindPopup(feature.properties.name);
+            var popupContent = '';
+            if (feature.properties) {
+              popupContent += '<strong>' + (feature.properties.name || 'Titik') + '</strong><br>';
+              for (let key in feature.properties) {
+                if (key !== 'name') {
+                  popupContent += key + ': ' + feature.properties[key] + '<br>';
+                }
+              }
             }
+            layer.bindPopup(popupContent);
+          },
+          pointToLayer: function (feature, latlng) {
+            return L.marker(latlng, { icon: L.icon({
+              iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
+              iconSize: [25, 41],
+              iconAnchor: [12, 41],
+              popupAnchor: [1, -34],
+              shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+              shadowSize: [41, 41]
+            }) });
           }
         }).addTo(map);
+
+        map.fitBounds(geojsonLayer.getBounds());
+      })
+      .catch(error => {
+        console.error('Gagal memuat GeoJSON:', error);
       });
   </script>
 </body>
