--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
     // Inisialisasi peta
-    var map = L.map('map').setView([-6.2, 106.8], 12); // ganti dengan lokasi pusat peta kamu
+    var map = L.map('map').setView([-7.748, 112.241], 15); // Disesuaikan ke lokasi data
 
     // Tile dasar mirip Google Maps (Carto Light)
     var baseLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
@@ -28,27 +28,18 @@
       .then(response => response.json())
       .then(data => {
         var geojsonLayer = L.geoJSON(data, {
+          style: function (feature) {
+            return { color: "#007bff", weight: 3 };
+          },
           onEachFeature: function (feature, layer) {
             var popupContent = '';
             if (feature.properties) {
-              popupContent += '<strong>' + (feature.properties.name || 'Titik') + '</strong><br>';
+              popupContent += '<strong>' + (feature.properties.Nomenklatur || 'Saluran') + '</strong><br>';
               for (let key in feature.properties) {
-                if (key !== 'name') {
-                  popupContent += key + ': ' + feature.properties[key] + '<br>';
-                }
+                popupContent += key + ': ' + feature.properties[key] + '<br>';
               }
             }
             layer.bindPopup(popupContent);
-          },
-          pointToLayer: function (feature, latlng) {
-            return L.marker(latlng, { icon: L.icon({
-              iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
-              iconSize: [25, 41],
-              iconAnchor: [12, 41],
-              popupAnchor: [1, -34],
-              shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-              shadowSize: [41, 41]
-            }) });
           }
         }).addTo(map);
 
